# simple-crawler

./: .gitignore  Dockerfile  README.md  pyproject.toml
crawler/: cli.py  controller.py  file_writer.py  http_client.py  parser.py
tests/: test_cli.py  test_controller.py  test_parser.py
