[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "A simple web crawler"
authors = ["Martin Raag <martinraag@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
validators = "^0.14.0"
beautifulsoup4 = "^4.8"
lxml = "^4.4"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.2"
rope = "^0.14.0"
pytest-asyncio = "^0.10.0"
asynctest = "^0.13.0"

[tool.poetry.scripts]
crawler = "crawler.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

